[workspace]
members = ["db-http-core", "neon-http", "planetscale-http", "turso-http", "sqlx-http", "sqlx-http-macros"]
resolver = "2"

[workspace.package]
version = "0.1.1"
edition = "2024"
authors = ["Timmy Silesmo <timmy@silesmo.com>"]
license = "MIT"
repository = "https://github.com/silesmo/turso-http"
