[package]
name = "db-http-core"
description = "Core types and traits for HTTP-based database backends"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"

[target.'cfg(target_os = "wasi")'.dependencies]
wstd = "0.6"

[target.'cfg(not(target_os = "wasi"))'.dependencies]
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["rt"] }
