[package]
name = "planetscale-http"
description = "PlanetScale MySQL HTTP API backend for db-http-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
db-http-core = { path = "../db-http-core", version = "0.1.0" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
