[package]
name = "sqlx-http"
description = "sqlx-compatible driver for HTTP database backends (Turso, Neon, PlanetScale)"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = ["json", "chrono", "uuid"]
chrono = ["dep:chrono"]
time = ["dep:time"]
uuid = ["dep:uuid"]
rust_decimal = ["dep:rust_decimal"]
bigdecimal = ["dep:bigdecimal"]
json = ["sqlx-core/json"]

[dependencies]
sqlx-core = { version = "0.8", default-features = false }
db-http-core = { path = "../db-http-core", version = "0.1.1" }
turso-http = { path = "../turso-http", version = "0.1.1" }
neon-http = { path = "../neon-http", version = "0.1.1" }
planetscale-http = { path = "../planetscale-http", version = "0.1.1" }
serde_json = "1"
serde = "1"
futures-core = "0.3"
futures-util = { version = "0.3", default-features = false, features = ["alloc"] }
either = "1"
base64 = "0.22"
url = "2"
log = "0.4"
sqlx-http-macros = { path = "../sqlx-http-macros", version = "0.1.1" }

# Optional type dependencies
chrono = { version = "0.4", default-features = false, features = ["serde", "std", "clock"], optional = true }
time = { version = "0.3", features = ["formatting", "parsing", "serde"], optional = true }
uuid = { version = "1", features = ["serde"], optional = true }
rust_decimal = { version = "1", optional = true }
bigdecimal = { version = "0.4", optional = true }
