[package]
name = "turso-http"
description = "Turso/libSQL HTTP API backend for db-http-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
db-http-core = { path = "../db-http-core", version = "0.1.1" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
